instructions.InstructionsDrawG.scala.error
Erreur de compilation :
InstructionsDrawG:16: error: ')' expected but 'else' found.
  else if(i == 15 || i == 17){
  ^